# simple-model-containerized

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  scripts.py
app/: __main__.py  application.py  models.py  nlp.py  routes.py
